--- a/api_testing/Cargo.toml
+++ b/api_testing/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-edition = "2021"
-name = "val_trackers"
+name = "api_testing"
 version = "0.1.0"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -12,19 +12,7 @@ reqwest = {version = "0.11", features = ["json"]}
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-strum = "0.24.1"
-strum_macros = "0.24.3"
-tokio-tungstenite = {version = "*", features = ["native-tls"]}
-
-[dependencies.iced]
-features = ["tokio", "debug", "image", "svg"]
-version = "0.5"
 
 [dependencies.tokio]
 features = ["time", "full"]
 version = "1"
-
-[workspace]
-members = [
-  "api_testing",
-]
